- add predefined algorithms (Algs)
- add Whiten/Std ops
- go annotation sources updated

0.1.6
- running from source simplified

0.1.7
- several fixes
- improved installation documention 

0.1.8
- fixes in replacemissing
- fix in cytoscape wrapper
- add xml read format
- add rank function
- add ismissing
- fix in dim handling
- fix in handling empty arrays
- OMIM link updated, renamed gene_names to gene_alias, added warning for outdatedness'
- automatic field name detection from variable names

0.1.9
- add csv/tsv support to Load/Save
- add psimi format to Read
- various bugfixes

0.1.10
- fixes to support IPython 0.11 and up

0.1.11
- further fix for support IPython 0.10 and down

0.1.12
- fix to accomodate change in numpy C API behaviour from version 1.6 onwards
- allow for use of Elems instead of Elem (will become default behaviour in one of the next versions)

0.1.13
- allow for use of In in Ipython 0.11 and up
- fix for using an unknown type upon an unknown type follwed by a Match
- addition of matrix_tsv reader. Can be used to parse e.g. microarray files
- update tutorial documentation

0.1.14
- blacklist numpy 1.6.0 (http://projects.scipy.org/numpy/ticket/1870)

0.1.15
- bug fix in determining which parent dims a dependent dims depends on
- Argsort/Rank now do not take missing attribute from input slice
- add transposer optimization step. Currently optimizes some filter/group/.. operations on matrices with nested vectors 
  that depend only on one dimension of the matrix.

0.1.16
- language debug / log support
- update some outdated urls
- work around some numpy inefficiencies
- add Import as alias for Read

0.1.17
- Windows newline support in tsv parser, and allow overriding delimiter choice
- Fix bug in Filter optimization introduced in 0.1.16
- To command can now handle multiple slices simultaneously
- Rename(fieldname=('f1','f2')) type of command now supported to rename multiple slices with same name
- Similar support for Cast
