@@ -1,4 +1,16 @@
-#!/usr/bin/env python
+import sys
+
+req_version = (2,6)
+cur_version = sys.version_info
+
+if not ((cur_version[0] >= req_version[0]) or (cur_version[0] == req_version[0] and cur_version[1] >= req_version[1])):
+    sys.stderr.write("Your python interpreter is too old. Ibidas needs at least Python 2.6. Please consider upgrading.\n")
+    sys.exit(-1)
+
+if cur_version[0] > 2:
+    sys.stderr.write("Ibidas only works with Python 2.x. Use 'python2' instead of 'python' to run the setup script.\n")
+    sys.exit(-1)
+    
 import ez_setup
 ez_setup.use_setuptools()
 
@@ -6,16 +18,6 @@ from setuptools import setup,find_packages,Extension
 import distutils.sysconfig
 import os
 import os.path
-import sys
-
-req_version = (2,6)
-cur_version = sys.version_info
-
-if not  (cur_version[0] == req_version[0] and
-         cur_version[1] >= req_version[1]):
-    print "Your python interpreter is too old. Ibidas needs at least Python 2.6. Please consider upgrading."
-    sys.exit(-1)
-
 
 include_dir = distutils.sysconfig.get_python_lib() + "/numpy/core/include/"
 if(not os.path.isfile(os.path.join(include_dir, "numpy/arrayobject.h"))):
@@ -23,7 +25,7 @@ if(not os.path.isfile(os.path.join(include_dir, "numpy/arrayobject.h"))):
     include_dir = include_dir.replace('lib', 'lib64')
     if(not os.path.isfile(os.path.join(include_dir, "numpy/arrayobject.h"))):
         #print os.path.join(include_dir, "numpy/arrayobject.h")
-        raise RuntimeError, 'numpy array headers not found'
+        raise RuntimeError('numpy array headers not found')
 
 if not os.path.isdir('docs/_build'):
     os.mkdir('docs/_build')
